@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: uuencode.test,v 1.1 2002/01/16 00:51:35 patthoyts Exp $
+# RCS: @(#) $Id: uuencode.test,v 1.2 2002/01/17 01:46:59 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -37,10 +37,18 @@ test uuencode-1.3 {decode longer string} {
     set result
 } [string repeat x 102]
 
-set testdata {begin 644 data.dat
+# Trf uses a different filler character.
+if {[catch {package present Trf}]} {
+    set testdata {begin 644 data.dat
 75&AE(&-A="!S870@;VX@=&AE(&UA="X`
 `
 end}
+} else {
+    set testdata {begin 644 data.dat
+75&AE(&-A="!S870@;VX@=&AE(&UA="X~
+`
+end}
+}
 
 test uuencode-1.4 {uuencode string} {
     catch {::uuencode::uuencode "The cat sat on the mat."} result
@@ -50,7 +58,7 @@ test uuencode-1.4 {uuencode string} {
 test uuencode-1.5 {uudecode string} {
     catch {::uuencode::uudecode $testdata} result
     set result
-} [list [list data.dat 644 "The cat sat on the mat.\x00"]]
+} [list [list data.dat 644 "The cat sat on the mat."]]
 
 # -------------------------------------------------------------------------
 
