@@ -1,4 +1,8 @@
-2002-01-12  Pat Thoyts <patthoyts@users.soruceforge.net>
+2002-01-17  Pat Thoyts <patthoyts@users.soruceforge.net>
+
+	* uuencode.tcl: added support for Trf and fixed length bug
+	
+2002-01-16  Pat Thoyts <patthoyts@users.soruceforge.net>
 
 	* uuencode.tcl: initial import of uuencode package
 	* pkgIndex.tcl: added uuencode package
